\name{NEWS}
\title{NEWS file for the TraMineRextras package}

\section{Changes in version 0.5.3 [2018-08-15] (Development version)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item
      \code{plot.stslist.surv()}, \code{seqplot.tentrop()}, , \code{seqplot.tentrop.m()}, \code{plot.seqimplic()}, \code{print.seqimplic()}: new argument \code{tick.last} that when set as \code{TRUE} allows to enforce a tick mark at the last position on the time x-axis. Has no effect when the last position is 1 + a multiple of \code{xtstep}. Default is to use the \code{tick.last} attribute of the state sequence object.
      \item
      \code{seqrep.grp()}: an error is raised when one of the groups has less than two cases.
    }
  }
  \subsection{Bug fixes}{
    \itemize{
      \item{Function \code{seqgen.missing()} the number of left and right
        elements to be turned into missings were inverted.}
    }
  }
  \subsection{Misc}{
    \itemize{
      \item{Function \code{seqeordplot()} suppressed. It is superseded by the
       function \code{seqpcplot()} of the TraMineR package.}
    }
  }
}

\section{Changes in version 0.4.2 [2018-02-01]}{
  \subsection{New functions}{
    \itemize{
      \item
      \code{seqprecarity()}: computes the sequence precarity index from
      a provided partial state order. The index is a
      corrected complexity index. See documentation page.
      \item
      \code{seqprecorr()}: determines the correction factor used by
        \code{seqprecarity()}.
      \item
      \code{seqprecstart()}: determines the starting precarity level
        of the sequence from the partial state order.
      \item
      \code{seqsurv()}: fits survival curves for states in state sequences.
        There is a plot method for objects returned by \code{seqsurv()}.
      \item
        \code{seqsplot()}: specific version of the TraMineR \code{seqplot()} function
        to plotting survival curves of states in sequences.
    }
  }
