@@ -1,12 +1,14 @@
-                CHANGES IN TraMineRextras VERSION 0.5.3 [2018-08-15] (Development version)
+                CHANGES IN TraMineRextras VERSION 0.5.3 [2018-08-17] (Development version)
 
 Changes in existing functions
-    o   plot.stslist.surv(), seqplot.tentrop(), seqplot.tentrop.m(), 
-        plot.seqimplic(), print.seqimplic(): new argument 'tick.last' 
-        that when set as TRUE allows to enforce a tick mark at 
-        the last position on the time x-axis. Has no effect when 
-        the last position is 1 + a multiple of xtstep. 
-        Default is to use the 'tick.last' attribute of the state 
+    o   seqsplot() now supports the 'ncol' argument for controlling 
+        the number of columns in the color legend.
+    o   plot.stslist.surv(), seqplot.tentrop(), seqplot.tentrop.m(),
+        plot.seqimplic(), print.seqimplic(): new argument 'tick.last'
+        that when set as TRUE allows to enforce a tick mark at
+        the last position on the time x-axis. Has no effect when
+        the last position is 1 + a multiple of xtstep.
+        Default is to use the 'tick.last' attribute of the state
         sequence object.
     o   seqrep.grp() an error is raised when one of the groups has less than two cases.
 
